--- a/Desenvolvimento Web/Atividade I - Evangelion/EVA01.html
+++ b/Desenvolvimento Web/Atividade I - Evangelion/EVA01.html
@@ -11,52 +11,60 @@
 <body>
 
     <header>
-            <nav>
-              <ul>
+        <nav>
+            <ul>
                 <li><a href="eva01.html">Home</a></li>
                 <li><a href="endOfEva.html">End of Evangelion</a></li>
-                <li><a href="curiosidades.html">Curiosidades</a></li> 
-              </ul>
-            </nav>
-    </header>  
+                <li><a href="curiosidades.html">Curiosidades</a></li>
+                <li><a href="personagens.html">Personagens</a></li>
+            </ul>
+        </nav>
+    </header>
 
-    <main> 
+    <main>
 
-    <div class="imagemtopo">
-        <img src="https://images.squarespace-cdn.com/content/58b866f417bffc4dc469acab/1630288409228-GDX3EHNYAZGYT59YE6D7/neon-genesis-evangelion-destaque-netflix.png?content-type=image%2Fpng"
-            alt="Protagonistas Evangelion" style="display:flex; margin: 0 0;">
-    </div>
+        <div class="imagemtopo">
+            <img src="https://images.squarespace-cdn.com/content/58b866f417bffc4dc469acab/1630288409228-GDX3EHNYAZGYT59YE6D7/neon-genesis-evangelion-destaque-netflix.png?content-type=image%2Fpng"
+                alt="Protagonistas Evangelion" style="display:flex; margin: 0 0;">
+        </div>
 
 
-    <p><strong>Neon Genesis Evangelion</strong> é um anime que marcou a história da cultura pop japonesa e
-        internacional, tanto pelo seu enredo complexo quanto pelas inovações em direção, narrativa e profundidade
-        psicológica dos personagens. Criado pelo estúdio Gainax e dirigido por Hideaki Anno, o anime foi transmitido
-        pela TV Tokyo, onde os episódios eram exibidos semanalmente, todas as quartas-feiras, às 18h30. A série foi ao
-        ar de 4 de outubro de 1995 a 27 de março de 1996, com um total de 26 episódios.
-    </p>
+        <p><strong>Neon Genesis Evangelion</strong> é um anime que marcou a história da cultura pop japonesa e
+            internacional, tanto pelo seu enredo complexo quanto pelas inovações em direção, narrativa e profundidade
+            psicológica dos personagens. Criado pelo estúdio Gainax e dirigido por Hideaki Anno, o anime foi transmitido
+            pela TV Tokyo, onde os episódios eram exibidos semanalmente, todas as quartas-feiras, às 18h30. A série foi
+            ao
+            ar de 4 de outubro de 1995 a 27 de março de 1996, com um total de 26 episódios.
+        </p>
 
-    <p>Quando começou a ser desenvolvido, Evangelion era para ser um anime de mechas como tantos outros da época, com
-        robôs gigantes defendendo a humanidade. Só que o Hideaki Anno estava passando por uma fase intensa de depressão
-        e crise existencial, o que influenciou demais no roteiro e na construção dos personagens. No começo, a produção
-        tinha apoio e recursos, mas conforme a série avançava, o estúdio Gainax começou a sofrer cortes de orçamento,
-        assim, a história precisou ser encurtada. Ao invés de 28 anjos que seriam apresentados ao longo do anime, apenas
-        17 foram incluídos. Os episódios finais, que incluiriam uma cena de invasão e confronto elaborados, foram
-        modificados para rascunhos, textos escritos e até uma curta cena em live action.
-    </p>
+        <p>Quando começou a ser desenvolvido, Evangelion era para ser um anime de mechas como tantos outros da época,
+            com
+            robôs gigantes defendendo a humanidade. Só que o Hideaki Anno estava passando por uma fase intensa de
+            depressão
+            e crise existencial, o que influenciou demais no roteiro e na construção dos personagens. No começo, a
+            produção
+            tinha apoio e recursos, mas conforme a série avançava, o estúdio Gainax começou a sofrer cortes de
+            orçamento,
+            assim, a história precisou ser encurtada. Ao invés de 28 anjos que seriam apresentados ao longo do anime,
+            apenas
+            17 foram incluídos. Os episódios finais, que incluiriam uma cena de invasão e confronto elaborados, foram
+            modificados para rascunhos, textos escritos e até uma curta cena em live action.
+        </p>
 
-    <p>A necessidade de cortar custos fez com que Anno resumisse o que sentiu de forma visual e menos metafórica. A
-        cacofonia visual e sonora que Shinji enfrenta nos episódios 25 e 26 representa, de maneira literal, o caos
-        interno de alguém imerso em desespero depressivo. Mas apesar de todos os cortes de gastos e adaptações, o
-        sucesso do anime e os questionamentos em relação ao que o seu final significava resultaram na necessidade da
-        Gainax produzir um filme para finalizar, de maneira oficial, Neon Genesis Evangelion. É então que nasce o longa
-        <em>The End of Evangelion</em>, lançado em 1997.
-    </p>
+        <p>A necessidade de cortar custos fez com que Anno resumisse o que sentiu de forma visual e menos metafórica. A
+            cacofonia visual e sonora que Shinji enfrenta nos episódios 25 e 26 representa, de maneira literal, o caos
+            interno de alguém imerso em desespero depressivo. Mas apesar de todos os cortes de gastos e adaptações, o
+            sucesso do anime e os questionamentos em relação ao que o seu final significava resultaram na necessidade absurda da
+            Gainax produzir um filme para finalizar, de maneira oficial, Neon Genesis Evangelion. É então que nasce o
+            longa
+            <em>The End of Evangelion</em>, lançado em 1997.
+        </p>
 
     </main>
 
-    <footer p>
+    <footer>
         <em>God's in his heaven, all's right with the world.</em>
-    </footer p>
+    </footer>
 </body>
 
 </html>
