--- a/Desenvolvimento Web/Atividade I - Evangelion/endOfEva.html
+++ b/Desenvolvimento Web/Atividade I - Evangelion/endOfEva.html
@@ -3,59 +3,71 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Neon Genesis Evangelion</title>
     <link rel="stylesheet" href="csss/index.css">
     <link rel="icon" href="https://m.media-amazon.com/images/I/41-qu8iFxDL._AC_UF894,1000_QL80_.jpg" type="image/png">
+    
 </head>
 
 <body>
 
     <header>
-            <nav>
-              <ul>
+        <nav>
+            <ul>
                 <li><a href="eva01.html">Home</a></li>
                 <li><a href="endOfEva.html">End of Evangelion</a></li>
-                <li><a href="curiosidades.html">Curiosidades</a></li> 
-              </ul>
-            </nav>
-    </header>  
+                <li><a href="curiosidades.html">Curiosidades</a></li>
+                <li><a href="personagens.html">Personagens</a></li>
+            </ul>
+        </nav>
+    </header>
 
-    <main> 
+    <main>
 
-    <div class="imagemtopo">
-        <img src="https://preview.redd.it/oa3x8t30xos71.jpg?auto=webp&s=678c3ffb7bb06ba8028f109d5c2df98077c3e14b"
-            alt="Protagonistas Evangelion" style="display:flex; margin: 0 0;">
-    </div>  
+        <div class="imagemtopo">
+            <img src="https://preview.redd.it/oa3x8t30xos71.jpg?auto=webp&s=678c3ffb7bb06ba8028f109d5c2df98077c3e14b"
+                alt="The End of Evangelion Logo" style="display:flex; margin: 0 0;">
+        </div>
 
-    <p><strong>The End of Evangelion:</strong> O filme <em>The End of Evangelion</em> foi lançado em 19 de julho de 1997
-        e apresenta "um novo final" para a série, apesar de canônico, esse é um ponto que ainda divide os fãs da saga
-        até hoje, uns preferem o final do anime por toda questão filosófica e psicológica, já outros preferem o final do
-        filme por questões de roteiro e ação. O longa-metragem segue diretamente os eventos finais do anime,
-        apresentando o desfecho da série com uma abordagem mais visual e épica. No filme, a organização SEELE coloca em
-        prática seu plano de “Instrumentalidade Humana”, enquanto a NERV, a agência que controla os EVA, enfrenta um
-        ataque massivo. Shinji, o protagonista, é forçado a lidar com escolhas cruciais e a encarar seus conflitos
-        internos e suas relações com os outros, enquanto o mundo ao seu redor enfrenta uma transformação apocalíptica.
-    </p>
+        <h1>ALERTA DE SPOILERS! <br>Leia por sua conta e risco.</h1>
+        <p><em>The End of Evangelion</em> foi lançado em 19 de julho de
+            1997
+            e apresenta "um novo final" para a série, apesar de canônico, esse é um ponto que ainda divide os fãs da
+            saga
+            até hoje, uns preferem o final do anime por toda questão filosófica e psicológica, já outros preferem o
+            final do
+            filme por questões de roteiro e ação. O longa-metragem segue diretamente os eventos finais do anime,
+            apresentando o desfecho da série com uma abordagem mais visual e épica. No filme, a organização SEELE coloca
+            em
+            prática seu plano de “Instrumentalidade Humana”, enquanto a NERV, a agência que controla os EVA, enfrenta um
+            ataque massivo. Shinji, o protagonista, é forçado a lidar com escolhas cruciais e a encarar seus conflitos
+            internos e suas relações com os outros, enquanto o mundo ao seu redor enfrenta uma transformação
+            apocalíptica.
 
-    <figure>
-        <img src="https://cdn.hobbyconsolas.com/sites/navi.axelspringer.es/public/media/image/2021/02/eva-01-neon-genesis-evangelion-2227939.jpg?tf=3840x"
-            alt="EVA-01" width="350">
-        <figcaption>Unidade Evangelion 01</figcaption>
-    </figure>
+            <p><em>The End of Evangelion</em> é um fechamento brutal e profundo para a saga de Evangelion, uma experiência que
+            mistura ficção científica e introspecção humana de forma visceral. O filme pega tudo o que foi explorado na
+            série e dá um desfecho mais explícito, embora ainda cheio de simbolismo e camadas interpretativas.</p>
 
-    <p><strong>Curiosidades:</strong></p>
-    <ul>
-        <li>Referências Religiosas: Evangelion usa símbolos e nomes do cristianismo, mas não tem significado religioso.
-            Foi só pra parecer “exótico” pros japoneses.</li>
-        <li>O personagem principal: Shinji Ikari, reflete um momento pessoal do diretor Hideaki Anno.</li>
-        <li>EVA-01: Ao contrário dos outros EVAs, que têm cores mais neutras ou frias, o EVA 01 tem um esquema de
-            cores roxo e verde neon. A escolha foi pra destacá-lo visualmente e deixá-lo mais icônico e “ameaçador”.
-        </li>
-        <li>Asuka e Rei: As duas personagens representam extremos emocionais — Rei é introvertida e Asuka é
-            extrovertida. A ideia era mostrar as diferentes camadas de relacionamento humano.</li>
-        <li>Impacto Cultural: Evangelion é tão famoso que tem museus, temáticos e até versões dos EVAs em produtos do
-            Japão.</li>
-    </ul>
+            <p>A história começa com a Seele atacando a NERV para forçar o início do Projeto de Instrumentalidade Humana.
+            Durante o caos, Shinji está em um estado de desespero absoluto, sentindo-se inútil e incapaz de lidar com
+            suas emoções. Enquanto isso, Asuka desperta no Eva 02 e tem uma das batalhas mais épicas da série contra os
+            Mass-Produced Evas, mas sua vitória é breve, culminando em uma derrota brutal.</p>
+
+            <p>Rei, que é uma fusão de humano e entidade divina, rejeita Gendo e se une ao Eva 01, catalisando o processo
+            de Instrumentalidade. Neste ponto, o filme entra em um terreno surreal. As fronteiras entre realidade e
+            consciência se dissolvem, e vemos Shinji confrontar suas dores, inseguranças e o vazio existencial. Ele é
+            colocado diante da escolha: permitir que todas as almas se unam em uma única consciência, eliminando
+            sofrimento e individualidade, ou aceitar a dor e a alegria de viver como indivíduos separados.</p>
+
+            <p>Shinji, após uma intensa jornada emocional, decide que mesmo com todo o sofrimento, a individualidade e as
+            conexões humanas são valiosas. Ele escolhe desfazer a Instrumentalidade, permitindo que as pessoas possam
+            retornar ao mundo físico, caso desejem.</p>
+
+            <p>O final é deliberadamente ambíguo. Shinji acorda em uma Terra desolada ao lado de Asuka. Sua tentativa de
+            estrangulá-la e a reação dela ("Que nojo") simbolizam a complexidade das relações humanas: um misto de
+            necessidade, dor e rejeição. Eles estão sozinhos, mas vivos, com a possibilidade de recomeçar.</p>
+        <p>
 
     </main>
 
