--- a/Desenvolvimento Web/Atividade I - Evangelion/responsividade.html
+++ b/Desenvolvimento Web/Atividade I - Evangelion/responsividade.html
@@ -1,1 +1,1 @@
-!DOCTYPE
+toda vez que tentei entender responsividade fiquei assim: https://cdn.ome.lt/A9gpkjGT-yzyF5HLJI8JWrLtvNs=/570x0/smart/uploads/conteudo/fotos/Coringa-2.png
