--- a/Desenvolvimento Web/Atividade I - Evangelion/curiosidades.html
+++ b/Desenvolvimento Web/Atividade I - Evangelion/curiosidades.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Neon Genesis Evangelion</title>
     <link rel="stylesheet" href="csss/index.css">
     <link rel="icon" href="https://m.media-amazon.com/images/I/41-qu8iFxDL._AC_UF894,1000_QL80_.jpg" type="image/png">
@@ -11,37 +12,41 @@
 <body>
 
     <header>
-            <nav>
-              <ul>
+        <nav>
+            <ul>
                 <li><a href="eva01.html">Home</a></li>
                 <li><a href="endOfEva.html">End of Evangelion</a></li>
-                <li><a href="curiosidades.html">Curiosidades</a></li> 
-              </ul>
-            </nav>
-    </header>  
+                <li><a href="curiosidades.html">Curiosidades</a></li>
+                <li><a href="personagens.html">Personagens</a></li>
+            </ul>
+        </nav>
+    </header>
 
-    <main> 
+    <main>
 
-    <div class="imagemtopo">
-        <img src="https://images.squarespace-cdn.com/content/58b866f417bffc4dc469acab/1630288409228-GDX3EHNYAZGYT59YE6D7/neon-genesis-evangelion-destaque-netflix.png?content-type=image%2Fpng"
-            alt="Protagonistas Evangelion" style="display:flex; margin: 0 0;">
-    </div>
+        <div class="imagemtopo">
+            <img src="https://images7.alphacoders.com/328/thumb-1920-328281.jpg"
+                alt="EVA-01 de perfil" style="display:flex; margin: 0 0;">
+        </div>
 
 
 
-    <p><strong>Curiosidades:</strong></p>
-    <ul>
-        <li>Referências Religiosas: Evangelion usa símbolos e nomes do cristianismo, mas não tem significado religioso.
-            Foi só pra parecer “exótico” pros japoneses.</li>
-        <li>O personagem principal: Shinji Ikari, reflete um momento pessoal do diretor Hideaki Anno.</li>
-        <li>EVA-01: Ao contrário dos outros EVAs, que têm cores mais neutras ou frias, o EVA 01 tem um esquema de
-            cores roxo e verde neon. A escolha foi pra destacá-lo visualmente e deixá-lo mais icônico e “ameaçador”.
-        </li>
-        <li>Asuka e Rei: As duas personagens representam extremos emocionais — Rei é introvertida e Asuka é
-            extrovertida. A ideia era mostrar as diferentes camadas de relacionamento humano.</li>
-        <li>Impacto Cultural: Evangelion é tão famoso que tem museus, temáticos e até versões dos EVAs em produtos do
-            Japão.</li>
-    </ul>
+        <p><strong>Curiosidades:</strong></p>
+        <ul>
+            <li>Referências Religiosas: Evangelion usa símbolos e nomes do cristianismo, mas não tem significado
+                religioso.
+                Foi só pra parecer “exótico” pros japoneses.</li>
+            <li>O personagem principal: Shinji Ikari, reflete um momento pessoal do diretor Hideaki Anno.</li>
+            <li>EVA-01: Ao contrário dos outros EVAs, que têm cores mais neutras ou frias, o EVA 01 tem um esquema de
+                cores roxo e verde neon. A escolha foi pra destacá-lo visualmente e deixá-lo mais icônico e “ameaçador”.
+            </li>
+            <li>Asuka e Rei: As duas personagens representam extremos emocionais — Rei é introvertida e Asuka é
+                extrovertida. A ideia era mostrar as diferentes camadas de relacionamento humano.</li>
+            <li>Impacto Cultural: Evangelion é tão famoso que tem museus, temáticos e até versões dos EVAs em produtos do Japão.</li>
+            <li>Hideaki Anno e a depressão: O tom pesado da série reflete a luta pessoal do criador com sua saúde
+                mental. Evangelion foi um desabafo criativo.</li>
+            <li>Influência absurda: Evangelion moldou o gênero mecha e inspirou obras como Gurren Lagann e Darling in the Franxx.</li>
+        </ul>
 
     </main>
 
