--- a/Desenvolvimento Web/Atividade I - Evangelion/home.html
+++ b/Desenvolvimento Web/Atividade I - Evangelion/home.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Neon Genesis Evangelion</title>
     <link rel="stylesheet" href="csss/index.css">
     <link rel="icon" href="https://m.media-amazon.com/images/I/41-qu8iFxDL._AC_UF894,1000_QL80_.jpg" type="image/png">
@@ -13,7 +14,7 @@
     <header>
         <nav>
             <ul>
-                <li><a href="eva01.html">Home</a></li>
+                <li><a href="home.html">Home</a></li>
                 <li><a href="endOfEva.html">End of Evangelion</a></li>
                 <li><a href="curiosidades.html">Curiosidades</a></li>
                 <li><a href="personagens.html">Personagens</a></li>
@@ -54,7 +55,8 @@
         <p>A necessidade de cortar custos fez com que Anno resumisse o que sentiu de forma visual e menos metafórica. A
             cacofonia visual e sonora que Shinji enfrenta nos episódios 25 e 26 representa, de maneira literal, o caos
             interno de alguém imerso em desespero depressivo. Mas apesar de todos os cortes de gastos e adaptações, o
-            sucesso do anime e os questionamentos em relação ao que o seu final significava resultaram na necessidade absurda da
+            sucesso do anime e os questionamentos em relação ao que o seu final significava resultaram na necessidade
+            absurda da
             Gainax produzir um filme para finalizar, de maneira oficial, Neon Genesis Evangelion. É então que nasce o
             longa
             <em>The End of Evangelion</em>, lançado em 1997.
