--- a/Desenvolvimento Web/Atividade I - Evangelion/curiosidades.html
+++ b/Desenvolvimento Web/Atividade I - Evangelion/curiosidades.html
@@ -14,7 +14,7 @@
     <header>
         <nav>
             <ul>
-                <li><a href="eva01.html">Home</a></li>
+                <li><a href="home.html">Home</a></li>
                 <li><a href="endOfEva.html">End of Evangelion</a></li>
                 <li><a href="curiosidades.html">Curiosidades</a></li>
                 <li><a href="personagens.html">Personagens</a></li>
@@ -28,8 +28,6 @@
             <img src="https://images7.alphacoders.com/328/thumb-1920-328281.jpg"
                 alt="EVA-01 de perfil" style="display:flex; margin: 0 0;">
         </div>
-
-
 
         <p><strong>Curiosidades:</strong></p>
         <ul>
