--- a/Desenvolvimento Web/Atividade I - Evangelion/personagens.html
+++ b/Desenvolvimento Web/Atividade I - Evangelion/personagens.html
@@ -14,7 +14,7 @@
     <header>
         <nav>
             <ul>
-                <li><a href="eva01.html">Home</a></li>
+                <li><a href="home.html">Home</a></li>
                 <li><a href="endOfEva.html">End of Evangelion</a></li>
                 <li><a href="curiosidades.html">Curiosidades</a></li>
                 <li><a href="personagens.html">Personagens</a></li>
